# av-exchange

./: LICENSE  README.md  pyproject.toml
src/: currency_rates.py  main.py
